# Cursor

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_DEPLOYMENT.md  AGENT_EXECUTION_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_STORYBOARD.md  COMPREHENSIVE_TESTING_GUIDE.md  COMPREHENSIVE_TESTING_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS_SUMMARY.md  Dockerfile  FINAL_DEPLOYMENT_SUMMARY.md  FINANCIAL_ANALYTICS_PLATFORM.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAIN_BRANCH_REPLACEMENT_SUMMARY.md  Makefile  OPERATIONAL_IMPLEMENTATION_GUIDE.md  OPERATIONAL_IMPLEMENTATION_PLAN.md  OPERATIONAL_STATUS_SUMMARY.md  PIPELINE_IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_KICKOFF.md  PROJECT_STATUS.md  PROJECT_STRUCTURE_OVERVIEW.md  PR_DESCRIPTION.md  README.md  REMOTE_PUSH_SUMMARY.md  SECURITY_FIX_SUMMARY.md  SPRINT_1_IMPLEMENTATION.md  SPRINT_COMPLETION_REPORT.md  SPRINT_DEVELOPMENT_PLAN.md  SPRINT_PLANNING.md  TEAM_ASSIGNMENTS.md  TEAM_COLLABORATION.md  TEAM_HANDOFF.md  TEST_SUMMARY_REPORT.md  docker-compose.development.yml  (+9 more)
.github/workflows/: ci-cd-test.yml  ci-pipeline.yml
app/: settings.py  urls.py
app/core/: audit.py  rbac.py
app/financial/: README.md  __init__.py  admin.py  apps.py  models.py  permissions.py  urls.py
ci/: Dockerfile.build  Dockerfile.lint  Dockerfile.scan  Dockerfile.test  docker-compose.ci.yml  docker-compose.yml  entrypoint.sh  quality_gate.sh
ci/scripts/: run_operational_tests.sh  test_infrastructure.sh  test_quality.sh  test_security.sh
docs/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  PIPELINE_DIAGRAMS.md  PRODUCTION_DEPLOYMENT.md  README.md  SCREENSHOT_GALLERY.md  SECURITY_CONFIGURATION.md  TROUBLESHOOTING.md  USER_GUIDE.md  security-knowledge-base.md
environments/: .env.production
pipeline/: __init__.py
requirements/: base.txt  common.txt  development.txt  financial.txt  frontend.txt  optional_foss_ingestion.txt  optional_pq_crypto.txt  production.txt  worker.txt
scripts/: code_quality.sh  init-db.sql  run_comprehensive_tests.sh  security_scan.sh  setup_dev.sh  verify-deployment.sh
simple-apps/: api.py  ui.py
src/backend/: Dockerfile  main.py  (+2 more)
tests/: conftest.py  test_documentation_validation.py  test_pipeline.py  test_pipeline_module.py
(+54 files in other folders)
